@@ -1,5 +1,6 @@
 =head1 Changes in DBD-Oracle 1.28 (svn rev xxxxx)
 
+  Added connection attribute 'ora_connect_with_default_signals' that will localize Perl's $SIG{INT} handeler from Brian Phillips and T. Bunce
   Fix in execute_array to stop possible endless loop when using a fetch sub by by Martin J. Evans 
   Adapted Martin J. Evans' ODBC 70execute_array.t into t/26exe_array.t by John Scoles
   Fix for execute_array to bring it up to spec. by Martin J. Evans and John Scoles
